<resources>
    <string name="app_name">Quetta Literary Festival</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quetta Literary Festival</string>
    <string name="nav_header_subtitle">http://www.quettalf.org/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_share_fragment">Share</string>
    <string name="hello_maps_fragment">Maps</string>
    <string name="hello_speaker_fragment">Speakers</string>
    <string name="hello_about_us_fragment">About</string>
    <string name="title_activity_program">Program</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="tab_text_1">Day1</string>
    <string name="tab_text_2">Day2</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_speaker_detail">SpeakersDetail</string>
    <string name="moderatedby">moderatedby</string>
    <string name="time">time</string>
    <string name="title">title</string>
    <string name="day">day</string>
    <string name="speakers">speakers</string>
    <string name="venue">venue</string>
    <string name="pupose">The purpose of the event is to first deconstruct the largely misperceived idea of Quetta city in popular Pakistani imagination, and then reconstruct it in a just, rational and aesthetically pleasing manner. The Festival also has it as one of its goals to dig deep into the intellectually fertile soil of the province in order to explore the gems and jewels of knowledge and wisdom lying underneath.

Combined with all that is the objective of facilitating a dialogue between regional, national and international scholars and writers. The QLF, thus, is a step towards generating a debate on ideas and issues most relevant to us as Pakistanis and as human beings in general.

Perhaps, and this is the most important of all, through the QLF people in Quetta will get a chance to know and engage with one another not just as inhabitants of a common geographical area, but also as beneficiaries of the various channels of the same fountain of intellect and insight. Considering the uniqueness of that scenario, the event would be a source of tremendous learning and scholarship for the residents of the city to take part in and contribute towards.</string>
    <string name="gb">
        1. Mr. Ahmed Farooq Bazai (S.I.)\n

2. Ms. Zubaida Jalal\n

3. Ms. Raheela Durrani\n

4. Mr. Sajjad Ahmad Bhutta\n

5. Ms. Zeba Bakhtiar\n

6. Mr. Jamal Shah\n

7. Mr. Iftikhar Firdous\n

8. Dr. Hafeez Jamali\n
    </string>
    <string name="about_us">Many stalls of books stood in the lawns of BUITEMS one pleasant afternoon. The occasion was BUITEMS Book fair, 2017. The readers and visitors there, however, were just a handful. That unfortunate scene activated, fortunately, the brain circuits of one of the organizers of Quetta Literary Festival (QLF) and (s)he envisioned what would shortly be an event featuring fun and enjoyment, panel discussions and poetry recitations, and performances and talks. What started as a sudden thought was baked in subsequent weeks and months into a furnished and feasible plan of action in the form of QLF scheduled on May 7-8, 2018.
If you didn’t know Quetta city well and somebody alluded to it in a discussion, your best guess would probably equate it with a tiny and exotic town whose otherwise beautiful image is marred by news on TV of disorder and chaos every now and then. But that is not even the tip of the iceberg. Beyond such an apparently dark veil lies a city brimming with exuberance and vigor of its arts, literature and folklore. That is what the QLF aims to reveal to the world.</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
