<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/rounded_corner"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="4dp"
    android:padding="15dp"
    android:layout_marginBottom="5dp"
    card_view:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/startLine"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corner_for_image" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/startLine"
            android:ellipsize="end"
            android:hint="@string/title"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/speakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/startLine"
            android:ellipsize="end"
            android:hint="@string/speaker_name"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/colorBlack" />
      <!--  <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:id="@+id/firstImage"
            android:layout_height="60dp"
            android:layout_below="@id/speakers"
            android:layout_marginRight="-14dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/qlf_logo_small"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/startLine"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:id="@+id/secondImage"
            android:src="@drawable/qlf_logo_small"
            android:layout_height="70dp"
            android:layout_below="@id/speakers"

            android:layout_toRightOf="@id/firstImage"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:id="@+id/thirdImage"
            android:layout_height="60dp"
            android:layout_marginLeft="-14dp"
            android:src="@drawable/qlf_logo_small"
            android:layout_below="@id/speakers"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/secondImage"/>
    -->    <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speakers"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/startLine"
            android:hint="@string/time"
            android:padding="14dp"
            android:paddingLeft="20dp"
            android:text="@string/time"
            android:paddingTop="0dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/startLine"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/venue"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>
</android.support.v7.widget.CardView>